# whisper_app

./: README.md  app.py  pyproject.toml
